2003-12-09 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest features and old forgotten features.

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in, src/common.h, src/config.cpp,
	src/connection.cpp, src/connection.h, src/druid.cpp, src/endpoint.cpp,
	src/endpoint.h, src/gnomemeeting.cpp, src/main_window.cpp, 
	src/pref_window.cpp: Added support for maximum bandwidth setting. The 
	codecs will be chosen during the negotiation according to the maximum 
	bandwidth available to the endpoint. Add message in the history when
	an opened codec is cancelled for transmission or reception for 
	whatever reason, including bandwidth exhausted. Delete the previous
	sound channel when reopening the sound card instead of reporting
	an error. Only display one popup when several attempts to
	open the soundcard with different codecs fail.
	
2003-12-08 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest features and old forgotten features.
	
	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Moved keys in the PERSONAL_DATA section
	to the GENERAL/PERSONAL_DATA section. Added USER_INTERFACE section
	containing keys related to the user interface and to the current
	state of its windows.
	
	* lib/gnome_prefs_window.c, lib/gnome_prefs_window.h: Cleanups.
	
	* sounds/busytone.wav, sounds/gnomemeeting.wav, sounds/ringtone.wav:
	Lowered volume a bit.

	* sounds/gnomemeeting.soundlist.in: Removed.
	
	* src/Makefile.am, src/sound_handling.cpp: Added support 
	for GNOMEMEETING_SOUNDS allowing to install GnomeMeeting in 
	a different prefix.

	* src/callbacks.cpp, src/callbacks.h: Added wrapper to call 
	gnomemeeting_window_show.
	
	* src/common.h: Updated GConf keys.

	* src/misc.cpp, src/misc.h: Added gnomemeeting_window_show and 
	gnomemeeting_window_hide to show / hide gnomemeeting windows with
	specific names and to save/restore their position and sizes.
