@@ -7,6 +7,7 @@ Main GUI :
 * Added a speed dials submenu in the Call menu. All users for which you are adding a speed dial in the addressbook will be listed there, that gives a fast and easy way to call your friend or to transfer any existing call to them.
 * Do not display DTMF's in the URL bar during calls.
 * Improved the incoming calls dialog
+* Added alphabet to the dialpad
 
 Address book :
 
