@@ -1,3 +1,9 @@
+2003-12-11 Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp, src/lid.cpp, src/main_window.cpp, 
+	src/main_window.h: Added alphabet to the dialpad. Useful for 
+	directories like Asterisk. Code cleanups.
+	
 2003-12-09 Damien Sandras  <dsandras@seconix.com>
 
 	* NEWS: Updated with latest features and old forgotten features.
